[metadata]
description-file = README.md

[flake8]
# E501 line too long (> 79 characters)
# D400 First line should end with a period
# D401 First line should be in imperative mood
# WPS420 Found wrong keyword: pass
# WPS410 Found wrong metadata variable: __all__
# WPS112 Found private name pattern
# DAR101 Missing parameter(s) in Docstring
# DAR201 Missing "Returns" in Docstring
# WPS602 Found using `@staticmethod`
# D100 Missing docstring in public module
# D101 Missing docstring in public class
# D102 Missing docstring in public method
# D104 Missing docstring in public package
# D105 Missing docstring in magic method
# D107 Missing docstring in __init__
# WPS318 Found extra indentation
# D204 1 blank line required after class docstring
# D205 1 blank line required between summary line and description
# WPS114 Found underscored name pattern
# DAR401 Missing exception(s) in Raises section
# C812 missing trailing comma
# WPS412 Found `__init__.py` module with logic
# WPS338 Found incorrect order of methods in a class
# WPS604 Found incorrect node inside `class` body
# N400: Found backslash that is used for line breaking
# WPS300 Found local folder import
# WPS110 Found wrong variable name
# WPS111 Found too short name
# WPS121 Found usage of a variable marked as unused
# WPS226 Found string constant over-use
# WPS317 Found incorrect multi-line parameters
# WPS319 Found bracket in wrong position
# I001 isort found an import in the wrong position
# E800: Found commented out code
# E123 closing bracket does not match indentation of opening bracket's line
# WPS210 Found too many local variables
# WPS211 Found too many arguments
# P101 format string does contain unindexed parameters
# WPS301 Found dotted raw import
# WPS440 Found block variables overlap -> buggy for multiple loops
# WPS441 Found control variable used after block -> buggy for multiple loops
# S105 Possible hardcoded password:
# WPS600 Found subclassing a builtin
# WPS214 Found too many methods
# WPS323 Found `%` string formatting -> broken for logger.error etc.
# I003 isort expected 1 blank line in imports, found 0 -> Pycharm doesn't do proper formatting for imports
# WPS230 Found too many public instance attributes
# WPS605 Found method without arguments
# WPS221 Found line with high Jones Complexity
# WPS122 Found all unused variables definition
# WPS612 Found useless overwritten method
# WPS326 Found implicit string concatenation
ignore = E501,D400,WPS110,WPS420,WPS410,WPS112,DAR101,DAR201,D401,WPS602,D100,D101,D102,D104,D105,D107,D204,D205,WPS318,WPS114,DAR401,C812,WPS412,WPS338,WPS604,N400,WPS300,WPS111,WPS121,WPS226,WPS319,WPS317,I001,E800,E123,WPS210,WPS211,P101,WPS301,WPS441,WPS440,S105,WPS600,WPS214,WPS323,I003,WPS230,WPS605,WPS221,WPS122,WPS612,WPS326
exclude = .git,__pycache__,build,dist,.env,.venv,venv
inline-quotes = double
max-line-length = 119
max-methods = 10

per-file-ignores =
    # WPS111 too short name for tests
    # WPS437 Found protected attribute usage for tests
    # S311 Standard pseudo-random generators are not suitable for security/cryptographic purposes. for tests
    # WPS221 Found line with high Jones Complexity
    # N802 function name should be lowercase
    # WPS204 Found overused expression
    # WPS214 Found too many methods
    # WPS421 Found wrong function call: print
    # WPS317 Found incorrect multi-line parameters
    # WPS609 Found direct magic attribute usage: __str__
    # WPS213 Found too many expressions
    # WPS226 Found string constant over-use
    # WPS336 Found explicit string concat
    # WPS431 Found nested class
    # WPS612 Found useless overwritten method
    # WPS425 Found boolean non-keyword argument
    # S608 Possible SQL injection vector through string-based query construction.
    # WPS432 Found magic number
    # WPS125 Found builtin shadowing
    # S110 Try, Except, Pass detected
    # WPS430 Found nested function
    # WPS442 Found outer scope names shadowing
    # WPS322 Found incorrect multi-line string
    # WPS342 Found implicit raw string
    # P103 other string does contain unindexed parameters
    **/tests/*_test.py: WPS111,WPS437,S311,WPS221,N802,WPS204,WPS214,WPS421,WPS317,WPS609,WPS213,WPS226,WPS336,WPS431,WPS612,WPS425,S608,WPS432,WPS125,S110,WPS430,WPS442,WPS322,WPS342,P103
    # WPS323 Found `%` string formatting
    *db.py: WPS323
    # I001 isort found an import in the wrong position
    /pastepwn/core/__init__.py: I001
    # WPS201 Found module with too many imports
    __init__.py: WPS201
    # S102 Use of exec detected.
    # WPS421 Found wrong function call
    setup.py: S102,WPS421
    # WPS432 Found magic number
    # WPS231 Found too high function cognitive complexity
    # WPS232 Found too high module cognitive complexity
    hashanalyzer.py: WPS432,WPS231,WPS232
    # S310 Audit url open for permitted schemes. Allowing use of file:/ or custom schemes is often unexpected.
    urlanalyzer.py: S310
    # WPS433 Found nested import
    # WPS232 Found too high module cognitive complexity
    # WPS231 Found too high function cognitive complexity
    # DAR301 Missing "Yields" in Docstring
    # WPS229 Found too long ``try`` body length
    discordaction.py: WPS433,WPS232,WPS231,DAR301,WPS229
    # WPS437 Found protected attribute usage
    request.py: WPS437
    # WPS231 Found too high function cognitive complexity
    network.py: WPS231
    # WPS603 Found using restricted magic method: __del__
    # WPS231 Found too high function cognitive complexity
    ircaction.py: WPS603,WPS231
    # WPS300 local imports for __init__ files
    # WPS201 Found module with too many imports
    __init__.py: WPS300,WPS201
    # WPS432 magic numbers for ibananalyzer
    # C408 Unnecessary dict call - rewrite as a literal.
    ibananalyzer.py: WPS432,C408
    # WPS213 Found too many expressions
    # WPS232 Found too high module cognitive complexity
    # WPS231 Found too high function cognitive complexity
    # WPS229 Found too long ``try`` body length
    # WPS225 Found too many `except` cases
    # WPS220 Found too deep nesting
    pastebinscraper.py: WPS213,WPS232,WPS231,WPS229,WPS225,WPS220
    # RST299 Inline substitution_reference start-string without end-string
    basicanalyzer.py: RST299
    # RST201 Block quote ends without a blank line; unexpected unindent.
    # RST301 Unexpected indentation
    mispaction.py: RST201,RST301
    # WPS231 Found too high function cognitive complexity
    wordanalyzer.py: WPS231
    actionhandler.py: WPS231
    pastedispatcher.py: WPS231
    # S106 Possible hardcoded password: 'token'
    example.py: S106
    # I004 isort found an unexpected blank line in imports
    network_test.py: I004
